--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,11 +27,11 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=lib\\jaxb-api-2.1.jar
-file.reference.lombok.jar=lib\\lombok.jar
-file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib/jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=lib/jaxb-api-2.1.jar
+file.reference.lombok.jar=lib/lombok.jar
+file.reference.sqljdbc42.jar=lib/sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -88,6 +88,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Web2.war
+war.name=Ecommerce.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
